objects/Project_Success__c.object
<CustomObject><fields>
        <fullName>No_of_PS_Meeting_Minutes__c</fullName>
        <label>No of PS Meeting Minutes</label>
        <summarizedField>PS_Meeting__c.Duration_Minutes__c</summarizedField>
        <summaryForeignKey>PS_Meeting__c.Project_Success__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Referrer_Email__c</fullName>
        <formula>Referrer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Success Referrals</relationshipLabel>
        <relationshipName>Project_Success_Referrals</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Student_CWID__c</fullName>
        <formula>Student__r.CWID__c</formula>
        <label>Student CWID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Email__c</fullName>
        <formula>Student__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Phone__c</fullName>
        <formula>Student__r.Phone</formula>
        <label>Student Phone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Success Pairing</relationshipLabel>
        <relationshipName>Project_Success_Tutor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Project Sucess</relationshipLabel>
        <relationshipName>Project_Sucess</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Tutor_Email__c</fullName>
        <formula>Tutor__r.Email</formula>
        <label>Tutor Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Tutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tutor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.LWC_Staff__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Success Pairing</relationshipLabel>
        <relationshipName>Project_Success_Students</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Project Success</label><nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Project Success ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Project Success</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Term__c</columns>
        <columns>Student__c</columns>
        <columns>Tutor__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <label>Active</label>
    </listViews><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Term__c</columns>
        <columns>Student__c</columns>
        <columns>Tutor__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>